Updates for pncats.cljc and fluokitten.