@@ -5,8 +5,11 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   #_ #_ :global-vars {*warn-on-reflection* true}
-  ; :jvm-opts ["--add-modules" "java.xml.bind"] ; Java 9 adventure
   :dependencies [[org.clojure/clojure "1.9.0"]
-                 [org.clojure/data.xml "0.0.8"]] ; POD cljs xml problem
+                 [org.clojure/data.xml "0.0.8"] ; POD cljs xml problem
+                 [uncomplicate/fluokitten "0.6.1"]]
   :repl-options {:init-ns gov.nist.spntools.reach})
+
+
+
 
